--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,22 @@
 .navbar {
   margin-bottom: 5px;
 }
+
+.jumbotron {
+  padding: 1rem;
+  margin-bottom: 5px;
+}
+
+.navbar-dark .navbar-nav .active > .nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-dark .navbar-nav .active > .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link.active:hover,
+.navbar-dark .navbar-nav .nav-link.show:hover,
+.navbar-dark .navbar-nav .show > .nav-link:hover {
+  color: rgba(255, 255, 255, 1);
+}
