--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,19 @@
     max-width: 105px;
   }
 }
+
+@media (max-width: 600px) {
+  #search-input {
+    max-width: 10rem;
+  }
+}
+
+@media (max-width: 578px) {
+  #search-button {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+  }
+}
